--- a/SEOCursos/app/src/main/res/layout/activity_edit_disciplina.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_edit_disciplina.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/cursos"
+            android:text="@string/editarDisciplina"
             android:textSize="40sp"
             android:textColor="@color/darkGrey" />
         <android.support.design.widget.TextInputLayout
