--- a/SEOCursos/app/src/main/res/layout/activity_login.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_login.xml
@@ -63,9 +63,6 @@
                 style="@style/Widget.AppCompat.Light.ActionButton"
                 android:background="?selectableItemBackground"
                 android:onClick="cadastro"/>
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="50dp" />
             <Button
                 android:id="@+id/confirmar"
                 android:layout_width="match_parent"
@@ -75,5 +72,27 @@
                 android:text="@string/fazerLogin"
                 android:background="@color/blueAccent2"
                 android:textColor="@color/white"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="10dp">
+                <com.facebook.login.widget.LoginButton
+                    android:id="@+id/login_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp" />
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"/>
+            </LinearLayout>
         </LinearLayout>
 </ScrollView>
