--- a/SEOCursos/app/src/main/res/layout/activity_main.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_main.xml
@@ -6,117 +6,12 @@
     android:layout_height="match_parent"
     tools:context="br.com.seocursos.seocursos.MainActivity">
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="8dp"
-            android:onClick="cursos">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
 
-                <ImageView
-                    android:id="@+id/cvImage1"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_book" />
-
-                <TextView
-                    android:id="@+id/cvTitulo1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage1"
-                    android:layout_toEndOf="@+id/cvImage1"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/cursos"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="8dp"
-            android:onClick="usuarios">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/cvImage2"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_person" />
-
-                <TextView
-                    android:id="@+id/cvTitulo2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage2"
-                    android:layout_toEndOf="@+id/cvImage2"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/usuarios"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="8dp"
-            android:onClick="disciplinas">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/cvImage3"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_library_books" />
-
-                <TextView
-                    android:id="@+id/cvTitulo3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage3"
-                    android:layout_toEndOf="@+id/cvImage3"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/disciplinas"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        <!--Mostrados a todos-->
         <android.support.v7.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
