--- a/SEOCursos/app/src/main/res/layout/activity_edit_usuario.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_edit_usuario.xml
@@ -19,6 +19,17 @@
             android:text="@string/editarUsuario"
             android:textSize="40sp"
             android:textColor="@color/darkGrey" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/userImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_add_a_photo"
+            android:background="@color/white"/>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -31,6 +42,7 @@
                 android:hint="@string/nome"
                 android:inputType="textPersonName"/>
         </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
