--- a/SEOCursos/app/src/main/res/layout/fragment_aluno_menu.xml
+++ b/SEOCursos/app/src/main/res/layout/fragment_aluno_menu.xml
@@ -45,7 +45,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        android:onClick="ebooks">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
