--- a/SEOCursos/app/src/main/res/layout/list_item_user.xml
+++ b/SEOCursos/app/src/main/res/layout/list_item_user.xml
@@ -9,7 +9,8 @@
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/userImage"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:background="@color/white"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
