--- a/SEOCursos/app/src/main/res/layout/activity_add_curso.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_add_curso.xml
@@ -94,7 +94,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sexo"
+            android:text="@string/nivel"
             android:textSize="18sp"/>
         <RadioGroup
             android:id="@+id/tipo"
