--- a/SEOCursos/app/src/main/res/layout/activity_chat.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_chat.xml
@@ -7,6 +7,7 @@
     tools:context="br.com.seocursos.seocursos.ChatActivity"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -14,19 +15,17 @@
         android:textSize="40sp"
         android:textColor="@color/darkGrey" />
 
-        <ScrollView
-            android:id="@+id/sv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/msgSend">
-            <LinearLayout
-                android:id="@+id/chat"
+            <com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
+                android:id="@+id/swipe"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="end|bottom">
-            </LinearLayout>
-        </ScrollView>
+                android:layout_height="wrap_content"
+                app:srl_direction="both"
+                android:layout_below="@id/titulo">
+                <ListView
+                    android:id="@+id/list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
         <LinearLayout
             android:id="@+id/msgSend"
