--- a/SEOCursos/app/src/main/res/layout/chat_balloon.xml
+++ b/SEOCursos/app/src/main/res/layout/chat_balloon.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:layout_margin="5dp"
+    android:layout_gravity="end">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text=""/>
             <TextView
                 android:id="@+id/mensagem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/darkGrey"
-                android:layout_below="@id/info"
-                android:textSize="20sp"/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                android:textSize="20sp"
+                android:text=""/>
+        </LinearLayout>
     <Space
         android:layout_width="match_parent"
         android:layout_height="1dp"
