--- a/SEOCursos/app/src/main/res/layout-land/activity_main.xml
+++ b/SEOCursos/app/src/main/res/layout-land/activity_main.xml
@@ -6,169 +6,21 @@
     android:layout_height="match_parent"
     tools:context="br.com.seocursos.seocursos.MainActivity">
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:onClick="cursos">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
+            android:gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:padding="16dp"
+            android:textSize="30sp"
+            android:textColor="@color/darkGrey"/>
 
-                <ImageView
-                    android:id="@+id/cvImage1"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_book" />
-
-                <TextView
-                    android:id="@+id/cvTitulo1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage1"
-                    android:layout_toEndOf="@+id/cvImage1"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/cursos"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:onClick="usuarios">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/cvImage2"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_person" />
-
-                <TextView
-                    android:id="@+id/cvTitulo2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage2"
-                    android:layout_toEndOf="@+id/cvImage2"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/usuarios"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:onClick="disciplinas">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/cvImage3"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_library_books" />
-
-                <TextView
-                    android:id="@+id/cvTitulo3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage3"
-                    android:layout_toEndOf="@+id/cvImage3"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/disciplinas"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:onClick="tarefas">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/cvImage4"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_description" />
-
-                <TextView
-                    android:id="@+id/cvTitulo5"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage4"
-                    android:layout_toEndOf="@+id/cvImage4"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/tarefas"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
