--- a/SEOCursos/app/src/main/res/layout/activity_main.xml
+++ b/SEOCursos/app/src/main/res/layout/activity_main.xml
@@ -11,43 +11,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--Mostrados a todos-->
-        <android.support.v7.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <TextView
+            android:id="@+id/userName"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="8dp"
-            android:onClick="tarefas">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="16dp">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:padding="16dp"
+            android:textSize="30sp"
+            android:textColor="@color/darkGrey"/>
 
-                <ImageView
-                    android:id="@+id/cvImage4"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginEnd="18dp"
-                    android:src="@drawable/ic_description" />
-
-                <TextView
-                    android:id="@+id/cvTitulo5"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@+id/cvImage4"
-                    android:layout_toEndOf="@+id/cvImage4"
-                    android:paddingBottom="5dp"
-                    android:textColor="@color/darkGrey"
-                    android:text="@string/tarefas"
-                    android:textSize="30sp" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        <!--Mostrados a todos-->
         <android.support.v7.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
