--- a/SEOCursos/app/src/main/res/layout/fragment_aluno_menu.xml
+++ b/SEOCursos/app/src/main/res/layout/fragment_aluno_menu.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="8dp"
-        android:onClick="cursos">
+        android:onClick="meusCursos">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="18dp"
                 android:layout_marginEnd="18dp"
-                android:src="@drawable/ic_book" />
+                android:src="@drawable/ic_collections_bookmark" />
 
             <TextView
                 android:id="@+id/cvTitulo1"
@@ -34,6 +34,42 @@
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/cvImage1"
                 android:layout_toEndOf="@+id/cvImage1"
+                android:paddingBottom="5dp"
+                android:textColor="@color/darkGrey"
+                android:text="@string/meusCursos"
+                android:textSize="30sp" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_margin="8dp"
+        android:onClick="cursos">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?selectableItemBackground"
+            android:padding="16dp">
+
+            <ImageView
+                android:id="@+id/cvImage2"
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="18dp"
+                android:layout_marginEnd="18dp"
+                android:src="@drawable/ic_book" />
+
+            <TextView
+                android:id="@+id/cvTitulo2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/cvImage2"
+                android:layout_toEndOf="@+id/cvImage2"
                 android:paddingBottom="5dp"
                 android:textColor="@color/darkGrey"
                 android:text="@string/cursos"
@@ -54,7 +90,7 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/cvImage2"
+                android:id="@+id/cvImage3"
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
@@ -63,13 +99,13 @@
                 android:src="@drawable/ic_library_books" />
 
             <TextView
-                android:id="@+id/cvTitulo2"
+                android:id="@+id/cvTitulo3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/cvImage2"
-                android:layout_toEndOf="@+id/cvImage2"
+                android:layout_toRightOf="@+id/cvImage3"
+                android:layout_toEndOf="@+id/cvImage3"
                 android:paddingBottom="5dp"
                 android:textColor="@color/darkGrey"
                 android:text="@string/ebooks"
